--- a/Output_example.html
+++ b/Output_example.html
@@ -1,11 +1,11 @@
 <html><head><title>Unused code in Jenkins api</title><style>body { font-family: Arial, Helvetica, sans-serif; font-size: 12px; }</style></head><body><h2> Finds and reports unused methods in Jenkins api </h2> (including in latest published plugins and potential usage in jelly files, except getters, setters and fields, except deprecated classes and methods, except unit tests)<br/>
 Downloaded update-center.json<br/>
-All files are up to date (1121 plugins)<br/>
+All files are up to date (1122 plugins)<br/>
 Indexing api in Jenkins<br/>
 Analyzing usage in core and plugins<br/>
-analyzing accelerated-build-now-plugin.hpi<br/>
 analyzing ace-editor.hpi<br/>
 analyzing accurev.hpi<br/>
+analyzing accelerated-build-now-plugin.hpi<br/>
 analyzing active-directory.hpi<br/>
 analyzing adaptive-disconnector.hpi<br/>
 analyzing AdaptivePlugin.hpi<br/>
@@ -236,8 +236,8 @@ analyzing curseforge-publisher.hpi<br/>
 analyzing custom-job-icon.hpi<br/>
 analyzing custom-tools-plugin.hpi<br/>
 analyzing custom-view-tabs.hpi<br/>
-analyzing CustomHistory.hpi<br/>
 analyzing customize-build-now.hpi<br/>
+analyzing CustomHistory.hpi<br/>
 analyzing cvs.hpi<br/>
 analyzing cvs-tag.hpi<br/>
 analyzing cygpath.hpi<br/>
@@ -358,6 +358,7 @@ analyzing extra-columns.hpi<br/>
 analyzing extra-tool-installers.hpi<br/>
 analyzing extreme-feedback.hpi<br/>
 analyzing extreme-notification.hpi<br/>
+analyzing ez-templates.hpi<br/>
 analyzing ezwall.hpi<br/>
 analyzing fail-the-build-plugin.hpi<br/>
 analyzing failedJobDeactivator.hpi<br/>
@@ -603,8 +604,8 @@ analyzing log-parser.hpi<br/>
 analyzing logaction-plugin.hpi<br/>
 analyzing logentries.hpi<br/>
 analyzing logfilesizechecker.hpi<br/>
-analyzing logging.hpi<br/>
-analyzing logstash.hpi<br/>
+analyzing logging.hpi<br/>analyzing logstash.hpi<br/>
+
 analyzing lotus-connections-plugin.hpi<br/>
 analyzing lsf-cloud.hpi<br/>
 analyzing lucene-search.hpi<br/>
@@ -799,7 +800,6 @@ analyzing pyenv.hpi<br/>
 analyzing python.hpi<br/>
 analyzing qc.hpi<br/>
 analyzing qftest.hpi<br/>
-analyzing qtest.hpi<br/>
 analyzing queue-cleanup.hpi<br/>
 analyzing r.hpi<br/>
 analyzing rabbitmq-build-trigger.hpi<br/>
@@ -999,6 +999,7 @@ analyzing testInProgress.hpi<br/>
 analyzing testlink.hpi<br/>
 analyzing testng-plugin.hpi<br/>
 analyzing testopia.hpi<br/>
+analyzing text-file-operations.hpi<br/>
 analyzing text-finder.hpi<br/>
 analyzing text-finder-run-condition.hpi<br/>
 analyzing tfs.hpi<br/>
@@ -1130,6 +1131,7 @@ ignored plugins : [python-wrapper.hpi]<br/>
 Unused methods in Jenkins :<br/>
 hudson.ClassicPluginStrategy.initializeComponents(hudson.PluginWrapper)<br/>
 hudson.ExtensionComponent.isDescriptorOf(Class)Z<br/>
+hudson.FilePath._syncIO()<br/>
 hudson.FilePath.readFromOffset(J) java.io.InputStream;<br/>
 hudson.Functions.addSuffix(ILString;String) String;<br/>
 hudson.Functions.adminCheck(org.kohsuke.stapler.StaplerRequest;org.kohsuke.stapler.StaplerResponse;Object;hudson.security.Permission)<br/>
@@ -1182,6 +1184,7 @@ hudson.model.Queue.wrapWithLock(java.util.concurrent.Callable) java.util.concurr
 hudson.model.ResourceController.getMissingResource(hudson.model.ResourceList) hudson.model.Resource;<br/>
 hudson.model.RunMap.newestValue() hudson.model.Run;<br/>
 hudson.model.RunMap.oldestValue() hudson.model.Run;<br/>
+hudson.model.RunParameterDefinition(String;String;String;String;hudson.model.RunParameterDefinition$RunParameterFilter)<br/>
 hudson.model.StockStatusIcon(String;org.jvnet.localizer.Localizable)<br/>
 hudson.model.TaskThread.createListener() hudson.model.TaskThread$ListenerAndText;<br/>
 hudson.model.UpdateSite$Entry(String;net.sf.json.JSONObject)<br/>
@@ -1196,6 +1199,7 @@ hudson.os.solaris.ZFSProvisioner(hudson.model.Node)<br/>
 hudson.scheduler.CrontabParser(antlr.TokenBuffer)<br/>
 hudson.scm.ChangeLogAnnotator.unregister()Z<br/>
 hudson.search.FixedSet([Lhudson.search.SearchItem)<br/>
+hudson.security.Permission(hudson.security.PermissionGroup;String)<br/>
 hudson.security.SecurityRealm.loadGroupByGroupname(String;Z) hudson.security.GroupDetails;<br/>
 hudson.security.csrf.CrumbFilter.isMultipart(javax.servlet.http.HttpServletRequest)Z<br/>
 hudson.security.csrf.CrumbIssuer.validateCrumb(javax.servlet.ServletRequest)Z<br/>
@@ -1318,8 +1322,8 @@ jenkins.util.xstream.XStreamDOM(String;java.util.Map;java.util.List)<br/>
 jenkins.util.xstream.XStreamDOM.writeTo(java.io.Writer)<br/>
 <br/>
 <h3 id=summary>Summary</h3><br/>
-1121 published plugins<br/>
-188 unused methods in Jenkins, except getters, setters, except deprecated classes and methods<br/>
+1122 published plugins<br/>
+191 unused methods in Jenkins, except getters, setters, except deprecated classes and methods<br/>
 Unused deprecated classes, methods and fields are listed in the <a href='https://ci.jenkins-ci.org/view/Infrastructure/job/infra_deprecated-usage-in-plugins/ws/target/output.html#deprecatedApiNotUsed'> deprecated-usage-in-plugins job </a><br/>
-duration : 387258 ms at 17 déc. 2015 01:18:08<br/>
+duration : 376688 ms at 22 déc. 2015 00:26:29<br/>
 </body></html>
